syntax = "proto3";

// This is an ugly name. Come up with something better.
package std_daq_protocol;

message GFImageMetadata {
  uint32 scan_id=1;
  uint32 scan_time=2;
  uint32 sync_time=3;
  uint64 frame_timestamp=4;
  uint64 exposure_time=5;
}

message JFImageMetadata {
  uint64 daq_rec=1;
}

message EGImageMetadata {
  uint64 exptime=1;
}

message PcoImageMetadata {
  uint64 global_timestamp_sec=1;
  uint64 global_timestamp_ns=2;
  string bsread_name=3;
}

enum ImageMetadataDtype {
  unknown=0;
  uint8=1; uint16=2; uint32=4; uint64=8;
  int8=11; int16=12; int32=14; int64=18;
  float16=22; float32=24; float64=28;
};

enum ImageMetadataStatus {
  good_image=0;
  missing_packets=1;
  id_missmatch=2;
};

enum ImageMetadataCompression {
  none=0;
  h5bitshuffle_lz4=1;
  blosc2=2;
};

message ImageMetadata {
  uint64 image_id=1;
  uint64 height=2;
  uint64 width=3;
  uint64 size=4;

  ImageMetadataDtype dtype=5;
  ImageMetadataStatus status=6;
  ImageMetadataCompression compression=7;

  oneof image_metadata {
    GFImageMetadata gf = 8;
    JFImageMetadata jf = 9;
    EGImageMetadata eg = 10;
    PcoImageMetadata pco = 11;
  }
}
